Modificación visual y correción de palabras

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div><h1>Proyecto Leyes</h1></div>
+    <div id="titulo"><h1>Proyecto Leyes</h1></div>
     <div id="opciones">
         <div id="CI">
             <p>Camara Inicial</p>
@@ -19,7 +19,7 @@
             </select>
         </div>
         <div id="CR">
-            <p>Camara Inicial</p>
+            <p>Camara Revisoria</p>
             <select name="opciones" id="opcionesCR">
                 <option value="selecciona">Selecciona una opción</option>
                 <option value="aprueba">Aprobar</option>
