Se modifica el CSS, se agrega una media css y también el footer

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/resources/balanceIcon.png">
     <title>Página de Legislación</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="titulo"><h1>Proyecto Leyes</h1></div>
+    <div id="titulo">
+        <h1>Proyecto Leyes</h1>
+        <img src="/resources/balanceIcon.png" alt="imagen de una balanza">
+    </div>
     <div id="opciones">
         <div id="CI">
             <p>Camara Inicial</p>
@@ -27,13 +31,18 @@
                 <option value="Corrige">Corregir</option>
             </select>
         </div>
-        <div id="btn">
-            <button id="miBoton">Consultar</button>
-        </div>
+    </div>
+    <div id="btn">
+        <button id="miBoton">Consultar⚖️</button>
     </div>
     <div id="Resultado">
-        <p id="resultado">Resultado:</p>
+        <div>
+            <p id="resultado">Resultado:</p>
+        </div>
     </div>
+    <footer>
+        <p>Desarrollado por Estudiantes de UTN-FRD</p>
+    </footer>
 </body>
 <script src="index.js"></script>
 </html>
